Fix: Remove added gap for debugging

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
     flex: auto;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
 }
 
 .pixel {
